# rust-code

./: .gitignore  README.md  rustfmt.toml
.github/workflows/: rust.yml
cat/: Cargo.toml  README.md  input.txt
cat/src/: main.rs
compound-types/: Cargo.toml
compound-types/src/: main.rs
convertingNumbers/: Cargo.toml
convertingNumbers/src/: main.rs
enums/: Cargo.toml
enums/src/: main.rs
fern-lib/: Cargo.toml
fern-lib/src/: lib.rs
fileresult/: Cargo.toml
fileresult/src/: main.rs
hello_cargo/: Cargo.toml
iterators/: Cargo.toml
iterators/src/: main.rs
json-parse/: .gitignore  Cargo.toml  generate.rs  input.json
json-parse/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
match-control-flow/: Cargo.toml
minigrep/: .gitignore  Cargo.toml
minigrep/src/: lib.rs  main.rs
module-test/: Cargo.toml
module-test/src/: constants.rs  foo.rs  lib.rs  main.rs
notifier/notificator/: Cargo.toml
ownership/: Cargo.toml
ownership/src/: main.rs
parrot-web/: Cargo.toml  README.md  data.json
parrot-web/src/: main.rs  parrotify.rs  parrotify_config.rs  samples.rs
parrotify/: Cargo.toml  sample.js
parrotify/src/: constants.rs  (+1 more)
pycharm_rust/: Cargo.toml
ray-tracer/: Cargo.toml  out.ppm
slice/: Cargo.toml
sss/: Cargo.toml  README.md
structs/: Cargo.toml
variables/: Cargo.toml
web-parrot/: Cargo.toml
web-parrot/parrot-web/: Cargo.toml  README.md  dev-run.bat  run-dev.sh  sample.env
web-parrot/parrot-web/src/: main.rs  parrotify_config.rs  samples.rs
web-parrot/parrot-web/src/parrotify/: mod.rs  routes.rs
(+24 files in other folders)
