[package]
name = "json-parse"
version = "0.1.0"
authors = ["Bilal Durrani <bilal33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1.0.104"
