[package]
name = "parrot-web"
version = "0.1.0"
authors = ["Bilal Durrani <bilal33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
futures = "0.3.1"
bytes = "0.5.4"
log = "0.4.8"
failure = "0.1.6"
env_logger = "0.7.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"
validator = "0.10.0"
validator_derive = "0.10.0"
parrotify= { path = "../parrotify" }
listenfd = "0.3.3"